...
}

// UI:
@Composable
internal fun Logo() {
  Image(
      modifier = Modifier.width(384.dp).height(144.dp).testTag("loginLogo"),
      painter = painterResource(id = R.drawable.only_notes_logo),
      contentDescription = "image description",
      contentScale = ContentScale.FillBounds)
}

@Composable
...
